Update CMake files
Link OMP and MPI properly.

Use CUDA language support where possible.

--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 3.9)
+project("libtrid")
 
 option(INTEL_CC "Use the Intel compiler." ON)
 option(BUILD_FOR_CPU "Build library for CPU architecture." OFF)
 option(BUILD_FOR_MIC "Build library for MIC architecture." OFF)
 option(BUILD_FOR_GPU "Build library for GPU architecture." OFF)
 option(BUILD_FOR_MPI "Build library for MPI combnied with the above architectures." OFF)
+option(BUILD_TESTING "Build tests for the library." OFF)
 option(USE_PROFILING "Build timing library for to measure timings." OFF)
 if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE
@@ -37,9 +39,7 @@ if (INTEL_CC)
   endif ()
 endif (INTEL_CC)
 
-project("libtrid")
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-
 if (INTEL_CC)
   # Set compiler flags/options for Intel compiler
   set(FLAGS_INTEL_DEFAULT "-xHost -m64 -parallel -qopenmp -qno-offload")
@@ -48,12 +48,13 @@ if (INTEL_CC)
   endif (PRODUCE_OPT_REPORT)
 
   # cmake-format: off
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} 		${FLAGS_INTEL_DEFAULT}")
-  set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}       ${FLAGS_INTEL_DEFAULT}")
+  set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS}     ${FLAGS_INTEL_DEFAULT}")
+  set(CMAKE_C_FLAGS           "${CMAKE_C_FLAGS}       ${FLAGS_INTEL_DEFAULT}")
+  set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -O0")
   # cmake-format: on
 else (INTEL_CC)
   # Set compiler flags/options for GCC compiler
-  set(FLAGS_GCC_DEFAULT "-march=native -fopenmp -g") # -march=core-avx2
+  set(FLAGS_GCC_DEFAULT "-march=native -fopenmp") # -march=core-avx2
   set(FLAGS_GCC_DEBUG "-O0")
   set(FLAGS_GCC_RELEASE "-flto -fstrict-aliasing -finline-functions") # -ffast-math -fargument-noalias -fargument-
                                                                       # noalias-global
@@ -75,10 +76,33 @@ set(N_MAX
     CACHE STRING
           "Maximal length of the internal buffer for storing intermediate c and d vectors of the Thomas algorithm")
 set(N_MPI_MAX 128 CACHE STRING "Maximum number of MPI processes in a dimension")
-add_definitions(-DN_MAX=${N_MAX})
-add_definitions(-DN_MPI_MAX=${N_MPI_MAX})
+add_library(trid_common_options INTERFACE)
+target_compile_features(trid_common_options INTERFACE cxx_std_14)
+target_compile_definitions(trid_common_options INTERFACE -DN_MAX=${N_MAX})
+target_compile_definitions(trid_common_options INTERFACE -DN_MPI_MAX=${N_MPI_MAX})
+target_include_directories(trid_common_options INTERFACE ${PROJECT_SOURCE_DIR}/include)
+
+if (BUILD_FOR_MPI)
+  find_package(MPI REQUIRED)
+  # TODO check it
+endif (BUILD_FOR_MPI)
+
+if (BUILD_FOR_GPU)
+  include(CheckLanguage)
+  check_language(CUDA)
+  if(CMAKE_CUDA_COMPILER)
+      enable_language(CUDA)
+      set(CMAKE_CUDA_STANDARD 11)
+      find_library(CUDART_LIBRARY cudart)
+  else (CMAKE_CUDA_COMPILER)
+    #todo checking
+  endif (CMAKE_CUDA_COMPILER)
+endif (BUILD_FOR_GPU)
+
 # Invoke subprojects
 add_subdirectory(src/cpu)
 add_subdirectory(src/cuda)
-enable_testing()
-add_subdirectory(test)
+if (BUILD_TESTING)
+  enable_testing()
+  add_subdirectory(test)
+endif (BUILD_TESTING)
