--- a/scalar/src/cuda/CMakeLists.txt
+++ b/scalar/src/cuda/CMakeLists.txt
@@ -1,25 +1,22 @@
-cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 3.9)
 
 if (BUILD_FOR_GPU)
+  # need for cublas support until cmake 3.17
   find_package(CUDA REQUIRED)
   include(FindCUDA)
-
-  set(CUDA_64_BIT_DEVICE_CODE ON) # -m64 compiler option
-  set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
   # architecture
   set(ARCHITECTURE
       "AUTO"
-      CACHE STRING "What is your target CUDA architecture?")
+      CACHE STRING "Your target CUDA architecture")
   if (${ARCHITECTURE} STREQUAL "AUTO")
     set(CUDA_ARCH_LIST Auto)
-    cuda_select_nvcc_arch_flags(CUDA_ARCH_FLAGS ${CUDA_ARCH_LIST})
-    list(APPEND CUDA_NVCC_FLAGS ${CUDA_ARCH_FLAGS})
+    cuda_select_nvcc_arch_flags(ARCH_LIST ${CUDA_ARCH_LIST})
     string(
       REPLACE ";"
               " "
               ARCH_FLAGS
-              "${CUDA_NVCC_FLAGS}")
+              "${ARCH_LIST}")
   else ()
     string(
       REPLACE "NUM"
@@ -28,13 +25,12 @@ if (BUILD_FOR_GPU)
               "-gencode arch=compute_NUM,code=sm_NUM")
   endif ()
 
-  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xptxas -dlcm=cg -std=c++11")
-  set(CUDA_NVCC_FLAGS_DEBUG "${CUDA_NVCC_FLAGS_DEBUG}   -g -G -O0 -ftz=false -fmad=false")
-  set(CUDA_NVCC_FLAGS_RELEASE "${CUDA_NVCC_FLAGS_RELEASE} -O3")
+  set(cuda_flags "-m64 -Xptxas -dlcm=cg ${ARCH_FLAGS}")
 
-  cuda_include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src/cuda/
-                           ${PROJECT_SOURCE_DIR}/src/cuda/generics/)
-  set(CUDA_LIBRARIES ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcudart.so) # , ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcublas.so)
+  # does not have effect TODO find working solution:
+
+  # set(CUDA_PROPAGATE_HOST_FLAGS OFF) set(CUDA_NVCC_FLAGS_DEBUG
+  # "${CUDA_NVCC_FLAGS_DEBUG}   -g -G -O0 -ftz=false -fmad=false")
 
   if (USE_PROFILING)
     # PROFILE disables macros with the suffix 2 to achieve lower overhead to use with profiler
@@ -44,10 +40,12 @@ if (BUILD_FOR_GPU)
         "DETAILED"
         CACHE STRING "Level of details for profiling")
     set_property(CACHE PROFILING_LEVEL PROPERTY STRINGS PROFILE DETAILED)
-    cuda_add_library(profiling_cuda SHARED ./cuda_timing.cu)
-    target_compile_options(profiling_cuda PRIVATE -fPIC)
+    add_library(profiling_cuda SHARED ./cuda_timing.cu)
+    set_target_properties(profiling_cuda PROPERTIES POSITION_INDEPENDENT_CODE ON)
+    target_include_directories(profiling_cuda PRIVATE ${PROJECT_SOURCE_DIR}/include/)
     if (BUILD_FOR_MPI)
       target_compile_definitions(profiling_cuda PRIVATE -DUSE_MPI)
+      target_link_libraries(profiling_cuda PUBLIC MPI::MPI_CXX)
     endif (BUILD_FOR_MPI)
     if (${PROFILING_LEVEL} STREQUAL "PROFILE")
       target_compile_definitions(profiling_cuda PUBLIC -DPROFILING=1)
@@ -55,16 +53,14 @@ if (BUILD_FOR_GPU)
       target_compile_definitions(profiling_cuda PUBLIC -DPROFILING=2)
     endif (${PROFILING_LEVEL} STREQUAL "PROFILE")
     target_link_directories(profiling_cuda PUBLIC "${CUDA_TOOLKIT_ROOT_DIR}/lib64")
-    target_link_libraries(profiling_cuda nvToolsExt)
+    target_link_libraries(profiling_cuda PRIVATE nvToolsExt)
   endif (USE_PROFILING)
 
-  cuda_add_library(
-    tridcuda
-    ${PROJECT_SOURCE_DIR}/src/cuda/trid_cuda.cu
-    SHARED
-    OPTIONS
-    -Xcompiler
-    -fPIC) # Make binary relocatable
+  add_library(tridcuda SHARED ./trid_cuda.cu)
+  cuda_add_cublas_to_target(tridcuda)
+  target_link_libraries(tridcuda trid_common_options)
+  set_target_properties(tridcuda PROPERTIES COMPILE_FLAGS "${cuda_flags}")
+  target_include_directories(tridcuda PRIVATE ${PROJECT_SOURCE_DIR}/src/cuda/ ${PROJECT_SOURCE_DIR}/src/cuda/generics/)
 
   install(
     TARGETS tridcuda
@@ -92,21 +88,22 @@ if (BUILD_FOR_GPU)
       endif ()
     endif ()
 
-    cuda_add_library(
-      tridcuda_mpi
-      ${PROJECT_SOURCE_DIR}/src/cuda/trid_cuda_mpi.cu
-      SHARED
-      OPTIONS
-      -Xcompiler
-      -fPIC
-      -Xcompiler) # Make binary relocatable
+    add_library(tridcuda_mpi SHARED ./trid_cuda_mpi.cu)
+    target_include_directories(tridcuda_mpi PRIVATE ${PROJECT_SOURCE_DIR}/src/cuda/
+                                                    ${PROJECT_SOURCE_DIR}/src/cuda/generics/)
+    set_target_properties(tridcuda_mpi PROPERTIES COMPILE_FLAGS "${cuda_flags}")
 
     if (USE_CUDA_AWARE_MPI)
       target_compile_definitions(tridcuda_mpi PRIVATE TRID_CUDA_AWARE_MPI)
     endif (USE_CUDA_AWARE_MPI)
 
+    target_link_libraries(
+      tridcuda_mpi
+      PRIVATE trid_common_options
+      PUBLIC tridcuda
+      PUBLIC MPI::MPI_CXX)
     if (USE_PROFILING)
-      target_link_libraries(tridcuda_mpi profiling_cuda)
+      target_link_libraries(tridcuda_mpi PUBLIC profiling_cuda)
     endif (USE_PROFILING)
     install(
       TARGETS tridcuda_mpi
