Changes to ADI CMake to automatically locate cublas

--- a/apps/adi/CMakeLists.txt
+++ b/apps/adi/CMakeLists.txt
@@ -127,9 +127,10 @@ if (BUILD_FOR_GPU)
   set(CUDA_NVCC_FLAGS_DEBUG   "-g -G -O0 -ftz=false -fmad=false")
   set(CUDA_NVCC_FLAGS_RELEASE "-O3")
 
-  set(CUDA_LIBRARIES ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcudart.so ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcublas.so)
+  set(CUDA_LIBRARIES ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcudart.so)
   cuda_include_directories(${LIBTRID_PATH}/include ${PROJECT_SOURCE_DIR}/include)
   cuda_add_executable(adi_cuda src/adi_cuda.cu src/preproc.cu)
+  cuda_add_cublas_to_target(adi_cuda)
   target_link_libraries(adi_cuda -L${LIBTRID_PATH}/lib -ltridcuda)
   
   find_package(MPI REQUIRED)
@@ -137,6 +138,7 @@ if (BUILD_FOR_GPU)
   cuda_include_directories(SYSTEM ${MPI_INCLUDE_PATH})
   cuda_add_executable(adi_mpi_cuda src/adi_mpi_cuda.cu)
   #cuda_include_directories(${LIBTRID_PATH}/include ${PROJECT_SOURCE_DIR}/include SYSTEM ${MPI_INCLUDE_PATH})
+  cuda_add_cublas_to_target(adi_mpi_cuda)
   target_link_libraries(adi_mpi_cuda -L${LIBTRID_PATH}/lib -ltridcuda -ltridcuda_mpi ${MPI_C_LIBRARIES})
 endif (BUILD_FOR_GPU)
 
