Remove unnecessary -g and -O3 and remove dead code from utils.hpp

--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -41,7 +41,7 @@ project("libtrid")
 
 if (INTEL_CC)
   # Set compiler flags/options for Intel compiler
-  set(FLAGS_INTEL_DEFAULT "-O3 -xHost -m64 -parallel -qopenmp -qno-offload -g")
+  set(FLAGS_INTEL_DEFAULT "-xHost -m64 -parallel -qopenmp -qno-offload")
   if (PRODUCE_OPT_REPORT)
     set(FLAGS_INTEL_DEFAULT "${FLAGS_INTEL_DEFAULT} -qopt-report=2 -qopt-report-phase=vec -qopt-report-file=stdout")
   endif (PRODUCE_OPT_REPORT)
